TermWareDot/trunk/TermWareDot1/trunk/TermWareDot/src/ua/gradsoft/parsers/dot/jjt/JJTDotParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. JJTDotParser.java */
package ua.gradsoft.parsers.dot.jjt;

import java.io.*;
import ua.gradsoft.termware.*;
import ua.gradsoft.parsers.dot.DotNode;
//import ua.gradsoft.parsers.dot.ParserHelper;

/**
 * Grammar to parse graphwiz dot grammar
 * @author Ruslan Shevchenko  
 */
public class JJTDotParser/*@bgen(jjtree)*/implements JJTDotParserTreeConstants, JJTDotParserConstants {/*@bgen(jjtree)*/
  protected JJTJJTDotParserState jjtree = new JJTJJTDotParserState();
   public  String getInFname()
     { return inFname; }

   public  void   setInFname(String inFname)
     { this.inFname=inFname; }

   private  String inFname="unknown";


   public SimpleNode getRootNode()
   {
     return (SimpleNode)jjtree.rootNode();
   }

  public static void main(String args[]) {
    JJTDotParser parser;
    if (args.length == 0) {
      System.out.println("JJT Dot Parser:  Reading from standard input . . .");
      parser = new JJTDotParser(System.in);
    } else if (args.length == 1) {
      System.out.println("JJT Dot Parser:  Reading from file " + args[0] + " . . .");
      try {
        parser = new JJTDotParser(new java.io.FileInputStream(args[0]));
        parser.setInFname(args[0]);
      } catch (java.io.FileNotFoundException e) {
        System.out.println("JJT Dot Parser:  File " + args[0] + " not found.");
        return;
      }
    } else {
      System.out.println("JJT Dot Parser:  Usage is one of:");
      System.out.println("         java JJTDotParser < inputfile");
      System.out.println("OR");
      System.out.println("         java JJTDotParser inputfile");
      return;
    }
    try {
      parser.dotGraph();
      System.out.println("JJT Dot Parser:  Dot program parsed successfully.");
    } catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("JJT Dot Parser:  Encountered errors during parse.");
    }
  }


    private final String getSpecialToken(Token tk)
    {
      String s="";
      while(tk.specialToken != null) {
         s=tk.specialToken.image+s;
         tk=tk.specialToken;
      }
      return s;
    }

    private final void setComment(DotNode node, Token tk)
    {
     if (tk!=null) {
         if (tk.specialToken!=null) {
           String comment=getSpecialToken(tk);
           node.setAttribute("original_comment",comment);
         }
     }
    }


  Term cons(Term x1,Term x2)
  {
   try {
    return TermWare.getInstance().getTermFactory().createTerm("cons",x1,x2);
   }catch(TermWareException ex){
     throw new TermWareRuntimeException(ex);
   }
  }

  Term createAtom(String name)
  {
   return TermWare.getInstance().getTermFactory().createAtom(name);
  }

  Term createNil()
  {
   return TermWare.getInstance().getTermFactory().createNil();
  }

  Term createInt(int x)
  {
   return TermWare.getInstance().getTermFactory().createInt(x);
  }

  Term createChar(char x)
  {
   return TermWare.getInstance().getTermFactory().createChar(x);
  }



  Term createString(String x)
  {
   return TermWare.getInstance().getTermFactory().createString(x);
  }

  Term createIntegerOrLong(String x) throws ParseException
  {
   try {
     Term retval=null;
     if (x.endsWith("L")||x.endsWith("l")) {
         try {
           retval=TermWare.getInstance().getTermFactory().createLong(Long.decode(x.substring(0, x.length()-1)));
         }catch(NumberFormatException ex){
           // it can be just too big, becouse literals can be unsigned, while decode does not handle unsogned,
           //  bigger then MAX
           // Here we will handle one case, which exists in JDK sources. (java/lang/Long.java)
           if (x.length()>2) {
             char last=x.charAt(x.length()-2);
             long l = Long.decode(x.substring(0,x.length()-2));
             char x0 = x.charAt(0);
             char x1 = x.charAt(1);
             if (x0=='0') {
               if (x1=='x'||x1=='X') {
                 // hex
                 int l1=Character.digit(last,16);
                 l=((l<<8)+l1);
               }else{
                 // oct
                 int l1=Character.digit(last,8);
                 l=((l<<4)+l1);
               }
             }
             retval=TermWare.getInstance().getTermFactory().createLong(l);
           }else{
             throw ex;
           }
         }
     }else{
         long l = Long.decode(x);
         retval=TermWare.getInstance().getTermFactory().createInt((int)l);
     }
     return retval;
   }catch(NumberFormatException ex){
      throw new ParseException("Can't read IntegerLiteral "+ex.getMessage()+"(s="+x+") "+" in file "+inFname);
   }
  }

  Term createDoubleOrFloat(String x)
  {
   Term retval=null;
   if (x.endsWith("F")||x.endsWith("f")) {
      retval=TermWare.getInstance().getTermFactory().createFloat(Float.valueOf(x.substring(0, x.length()-1)));
   }else{
      retval=TermWare.getInstance().getTermFactory().createDouble(Double.valueOf(x));
   }
   return retval;
  }

  Term createFloatOrDouble(String x)
  {
   return createDoubleOrFloat(x);
  }

  Term createBoolean(boolean x)
  {
   return TermWare.getInstance().getTermFactory().createBoolean(x);
  }

  Term createTerm(String name,Term x) throws TermWareException
  {
   return TermWare.getInstance().getTermFactory().createTerm(name,x);
  }

  Term createTerm(String name,Term x1, Term x2) throws TermWareException
  {
   return TermWare.getInstance().getTermFactory().createTerm(name,x1,x2);
  }

/*****************************************
 * THE DOT LANGUAGE GRAMMAR STARTS HERE *
 *****************************************/

/*
 * Program structuring syntax follows.
 */
  final public void dotGraph() throws ParseException {
 /*@bgen(jjtree) dotGraph */
  SimpleNode jjtn000 = new SimpleNode(JJTDOTGRAPH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tkStrict=null;
  Token tkDigraph=null;
  Token tkGraph=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRICT:
        tkStrict = jj_consume_token(STRICT);
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DIGRAPH:
        tkDigraph = jj_consume_token(DIGRAPH);
        break;
      case GRAPH:
        tkGraph = jj_consume_token(GRAPH);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      id();
      jj_consume_token(LBRACE);
      dotStmtList();
      jj_consume_token(RBRACE);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (tkStrict!=null) {
       jjtn000.addTerm(createBoolean(true),0);
    }else{
      jjtn000.addTerm(createBoolean(false),0);
    }
    if (tkDigraph!=null) {
      jjtn000.addTerm(createAtom("digraph"),1);
    }else{
      jjtn000.addTerm(createAtom("graph"),1);
    }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void dotStmtList() throws ParseException {
 /*@bgen(jjtree) dotStmtList */
 SimpleNode jjtn000 = new SimpleNode(JJTDOTSTMTLIST);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token tk;
    try {
      stmt();
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        jj_consume_token(SEMICOLON);
        stmt();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void stmt() throws ParseException {
 /*@bgen(jjtree) stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GRAPH:
      case NODE:
      case EDGE:
        dotAttrStmt();
        break;
      case SUBGRAPH:
      case LBRACE:
        subgraphOrEdgeSubgraphStmt();
        break;
      default:
        jj_la1[3] = jj_gen;
        if (jj_2_2(2147483647)) {
          dotAttributeAssignment();
        } else if (jj_2_3(2)) {
          nodeOrEdgeStmt();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void nodeOrEdgeStmt() throws ParseException {
 /*@bgen(jjtree) nodeOrEdgeStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTNODEOREDGESTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      dotNodeId();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
      case GRAPG_EDGE:
      case DIGRAPG_EDGE:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          attrList();
          break;
        case GRAPG_EDGE:
        case DIGRAPG_EDGE:
          edgeStmtTail();
          break;
        default:
          jj_la1[4] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void subgraphOrEdgeSubgraphStmt() throws ParseException {
 /*@bgen(jjtree) subgraphOrEdgeSubgraphStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTSUBGRAPHOREDGESUBGRAPHSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      dotSubgraph();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GRAPG_EDGE:
      case DIGRAPG_EDGE:
        edgeStmtTail();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void dotAttrStmt() throws ParseException {
 /*@bgen(jjtree) dotAttrStmt */
 SimpleNode jjtn000 = new SimpleNode(JJTDOTATTRSTMT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token tk1=null;
 Token tk2=null;
 Token tk3=null;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GRAPH:
        tk1 = jj_consume_token(GRAPH);
        break;
      case NODE:
        tk2 = jj_consume_token(NODE);
        break;
      case EDGE:
        tk3 = jj_consume_token(EDGE);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      attrList();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    String kind=null;
    if (tk1!=null) {
       kind="graph";
    }else if(tk2!=null) {
       kind="node";
    }else if(tk3!=null) {
       kind="edge";
    }else{
       {if (true) throw new RuntimeException("impossible");}
    }
    jjtn000.addTerm(createAtom(kind),0);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void attrList() throws ParseException {
 /*@bgen(jjtree) attrList */
  SimpleNode jjtn000 = new SimpleNode(JJTATTRLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        jj_consume_token(LBRACKET);
        attrAssignmentsList();
        jj_consume_token(RBRACKET);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LBRACKET:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void attrAssignmentsList() throws ParseException {
 /*@bgen(jjtree) attrAssignmentsList */
  SimpleNode jjtn000 = new SimpleNode(JJTATTRASSIGNMENTSLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING_LITERAL:
      case IDENTIFIER:
        dotAttributeAssignment();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_3;
          }
          jj_consume_token(COMMA);
          dotAttributeAssignment();
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void dotAttributeAssignment() throws ParseException {
 /*@bgen(jjtree) dotAttributeAssignment */
 SimpleNode jjtn000 = new SimpleNode(JJTDOTATTRIBUTEASSIGNMENT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token tkli = null;
 Token tklf = null;
    try {
      id();
      jj_consume_token(EQ);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING_LITERAL:
      case IDENTIFIER:
        id();
        break;
      case INTEGER_LITERAL:
        tkli = jj_consume_token(INTEGER_LITERAL);
        break;
      case FLOATING_POINT_LITERAL:
        tklf = jj_consume_token(FLOATING_POINT_LITERAL);
        break;
      case LBRACEBRACE:
        dotCompoundRecord();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (tkli!=null) {
      jjtn000.addTerm(createIntegerOrLong(tkli.image),1);
    }else if (tklf!=null) {
      jjtn000.addTerm(createFloatOrDouble(tklf.image),1);
    }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }
